# arctk

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  README.md.bak  chelt_ROS.csv  chelt_no_ROS.csv  chelt_no_pdt.csv  chelt_no_ppix.csv  chelt_pdt.csv  chelt_ppix.csv  index.html  plan.txt  rustfmt.toml  setup.cfg  test.py  thick_oxy.csv
.github/workflows/: badges.yml  ci.yml  documentation.yml  quick_ci.yml
docs/: aliases.js  crates.js  index.html  search-index.js  settings.html  source-files.js
docs/adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
docs/ahash/: all.html  index.html  struct.AHasher.html  struct.RandomState.html
docs/aho_corasick/: enum.ErrorKind.html  enum.MatchKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html  trait.StateID.html
docs/ansi_rgb/: all.html  fn.black.html  fn.blue.html  fn.blue_magenta.html  fn.cyan.html  fn.cyan_blue.html  fn.green.html  fn.green_cyan.html  fn.magenta.html  fn.magenta_pink.html  fn.orange.html  fn.red.html  fn.white.html  fn.yellow.html  fn.yellow_green.html  index.html  struct.WithBackground.html  struct.WithForeground.html  trait.Background.html  trait.Foreground.html
docs/approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
docs/arctk/: all.html  index.html  macro.access.html  macro.args.html  macro.clone.html  macro.display_field!.html  macro.display_field.html  macro.display_field_ln!.html  macro.display_field_ln.html  macro.fmt_report.html  macro.fmt_reports.html  macro.map.html  macro.pause.html  macro.report.html  macro.report_list.html  macro.reports.html  sidebar-items.js
docs/arctk_attr/: all.html  attr.file.html  attr.input.html  attr.load.html  attr.output.html  attr.save.html  index.html  sidebar-items.js
docs/arctk_proc/: all.html  derive.File.html  derive.Input.html  derive.Load.html  derive.Output.html  derive.Save.html  index.html  sidebar-items.js
docs/arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html
docs/atom/: all.html  index.html  struct.Atom.html  struct.AtomSetOnce.html  trait.FromRawPtr.html  trait.GetNextMut.html  trait.IntoRawPtr.html
docs/attr/: all.html  attr.input.html  attr.load.html  attr.output.html  attr.save.html  index.html
docs/atty/: enum.Stream.html  index.html
docs/babbage/: all.html  constant.BACKUP_TERM_WIDTH.html  fn.build.html  fn.init.html  fn.initialisation.html  fn.input.html  fn.main.html  fn.run.html  index.html  sidebar-items.js  struct.Parameters.html
docs/blitzer/: all.html  fn.build.html  fn.init.html  fn.input.html  fn.main.html  index.html  struct.Parameters.html
docs/block/: all.html  index.html  struct.Block.html  struct.ConcreteBlock.html  struct.RcBlock.html  trait.BlockArguments.html  trait.IntoConcreteBlock.html
docs/bracket_algorithm_traits/: all.html  index.html  sidebar-items.js
docs/bracket_color/: all.html  index.html  sidebar-items.js
docs/bracket_geometry/: all.html  index.html
docs/bracket_lib/: all.html  index.html
docs/bracket_noise/: all.html  index.html
docs/bracket_pathfinding/: all.html  index.html
docs/bracket_random/: all.html  index.html
docs/bracket_terminal/: all.html  index.html  macro.add_wasm_support!.html  macro.add_wasm_support.html  macro.embedded_resource.html  macro.gl_error_wrap!.html  macro.gl_error_wrap.html  macro.link_resource.html  sidebar-items.js  type.FontCharType.html
docs/bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  index.html  macro.offset_of.html  sidebar-items.js  trait.Contiguous.html  trait.Pod.html  trait.TransparentWrapper.html  trait.Zeroable.html
docs/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
docs/cartograph/: all.html  fn.build.html  fn.grow.html  fn.init.html  fn.input.html  fn.main.html  fn.mapping.html  fn.post_analysis.html  (+4 more)
examples/: mcrt.json5  raman.json5
input/: babbage.json5  cartograph.json5  cartographer.json5  diffuse.json5  example.txt  flask.json5  install.sh  mcrt copy.json5  mcrt.json5  mcrt_second_pass.json5  mcrt_test_c.json5  parameters.json  parameters.json5  paste.sh  plot.py  points.csv  render.json5  render_skin.json5  run.sh  stitch.sh  weightings.csv  wonder.json5
legacy/: attribute.rs  attribute_linker.rs  babbage.rs  cartograph.rs  cartographer.rs  flask_plot.py  group_map.rs  mcrt.rs  render.rs  scene.rs  setup.rs  surface_builder.rs  surface_linker.rs  torus.rs
res/crates/attr/: Cargo.toml
res/crates/attr/src/: input.rs  lib.rs  load.rs  output.rs  save.rs
res/crates/proc/: Cargo.toml
res/crates/proc/src/: hello_macro.rs  input.rs  lib.rs  load.rs  output.rs  save.rs
script/: __init__.py
scripts/: __init__.py  gen_docs.sh  make_calcs_sphere.py  power_change.py  spectrometer_extract.py  spectrometer_plot.py  update_docs.sh
src/: lib.rs
(+28885 files in other folders)
