[package]
name = "arctk"
version = "2.0.1"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
description = "Numerical simulations of physical systems"
repository = "https://github.com/FreddyWordingham/arctk"
readme = "README.md"
keywords = ["physics", "mcrt", "ray-tracing", "numerical", "simulation"]
categories = ["science", "simulation"]
edition = "2021"
documentation = "https://freddywordingham.github.io/arctk"
license = "MIT OR Apache-2.0"

[features]

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.17"
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
