[package]
name = "arctk"
version = "2.0.6"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
description = "Numerical simulations of physical systems"
repository = "https://github.com/FreddyWordingham/arctk"
readme = "README.md"
keywords = ["physics", "mcrt", "ray-tracing", "numerical", "simulation"]
categories = ["science", "simulation"]
edition = "2021"
documentation = "https://freddywordingham.github.io/arctk"
license = "MIT OR Apache-2.0"

[features]

[dependencies]
atty = "0.2.14"
hex = "0.4.3"
indicatif = "0.17.0"
itertools = "0.10.3"
json5 = "0.4.1"
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
palette = "0.6.1"
png = "0.17.6"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slice-of-array = "0.3.2"
