[package]
name = "arctk"
version = "2.0.10"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
description = "Numerical simulations of physical systems"
repository = "https://github.com/FreddyWordingham/arctk"
readme = "README.md"
keywords = ["physics", "mcrt", "ray-tracing", "numerical", "simulation"]
categories = ["science", "simulation"]
edition = "2021"
documentation = "https://freddywordingham.github.io/arctk"
license = "MIT OR Apache-2.0"

[features]

[dependencies]
atty = "0.2.*"
hex = "0.4.*"
indicatif = "0.17.*"
itertools = "0.10.*"
json5 = "0.4.*"
nalgebra = { version = "0.32.*", features = ["serde-serialize"] }
ndarray = { version = "0.15.*", features = ["rayon"] }
ndarray-stats = "0.5.*"
palette = "0.6.*"
png = "0.17.*"
rand = "0.8.*"
rayon = "1.7.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
slice-of-array = "0.3.*"
