[metadata]
# replace with your username:
name = arctk
version = 0.0.2
author = Freddy Wordingham
author_email = fjmw201@exeter.ac.uk
description = Numerical simulation tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FreddyWordingham/arctk
project_urls =
    Bug Tracker = https://github.com/FreddyWordingham/arctk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = scripts
packages = find:
python_requires = >=3.9

[options.packages.find]
where = scripts
