[package]
authors = ["Freddy Wordingham <fjmw201@exeter.ac.uk>"]
name = "attr"
version = "0.0.0"
description = "Support attribute macro library."
repository = "https://github.com/FreddyWordingham/arctk"
readme = "../../../README.md"
keywords = ["support"]
catagories = []
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc = { path = "../proc" }

proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = { version = "1.0.*", features = ["full"] }

[profile.dev]
# Development profile: "cargo build".
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
# Release profile: "cargo build --release"
# # [DEV RELEASE]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = "unwind"
incremental = false
overflow-checks = true

# [profile.release]
# # [RELEASE]
# # Release profile: "cargo build --release"
# opt-level = 3
# debug = false
# rpath = false
# lto = "fat"
# debug-assertions = false
# codegen-units = 1
# panic = "abort"
# incremental = false
# overflow-checks = false

[profile.test]
# Testing profile: "cargo test"
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
# Benchmark profile: "cargo bench" (and "cargo test --release)".
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
